# cron-quiles

./: .gitignore  AI.md  CHANGELOG.md  CLAUDE.md  COMMUNITIES.md  CONTRIBUTING.md  GEMINI.md  MIGRATION.md  Makefile  README.md  RELEASE_NOTES.md  comunidades.html  cronquiles.ics  eventos.html  index.html  main.py  pyproject.toml  requirements.txt  serve.py  suscribir.html
.agents/: README.md
.agents/custom_agents/: backend_engineer.yaml  data_healer.yaml  devops_maintainer.yaml  frontend_designer.yaml
.agents/instructions/: 01-architecture-routing.md  02-style-and-tools.md  03-project-overview.md  04-documentation-rules.md  05-testing-rules.md  06-deployment-internals.md  07-persona-and-coding-rules.md  08-pipeline-architecture.md  09-project-structure.md
.agents/prompts/: add-manual-event.md  add-new-feed.md  create-pr.md
.agents/workflows/: audit-and-deduplication.md  publish-test.md
.github/ISSUE_TEMPLATE/: add_feed.md  add_manual_event.md  bug_report.md  community_request.md
.github/workflows/: README.md  tests.yml  update-events.yml
config/: GOOGLE_CALENDAR_SETUP.md  feeds.yaml  list_icals.txt  manual_events.json
css/: event-v3-color-lanes.css  styles.css  variables.css
data/: cronquiles-mexico.ics  cronquiles-mexico.json  cronquiles-mx-ags.ics  cronquiles-mx-ags.json  cronquiles-mx-bc.ics  cronquiles-mx-bc.json  cronquiles-mx-cmx.ics  cronquiles-mx-cmx.json  cronquiles-mx-coah.ics  cronquiles-mx-coah.json  cronquiles-mx-jal.ics  cronquiles-mx-jal.json  cronquiles-mx-mex.ics  cronquiles-mx-mex.json  cronquiles-mx-méx.ics  cronquiles-mx-méx.json  cronquiles-mx-nle.ics  cronquiles-mx-nle.json  cronquiles-mx-pue.ics  cronquiles-mx-pue.json  cronquiles-mx-qro.ics  cronquiles-mx-qro.json  cronquiles-mx-son.ics  cronquiles-mx-son.json  cronquiles-mx-tab.ics  cronquiles-mx-tab.json  cronquiles-mx-tamps.ics  cronquiles-mx-tamps.json  cronquiles-mx-ver.ics  cronquiles-mx-ver.json  cronquiles-mx-yuc.ics  cronquiles-mx-yuc.json  cronquiles-online.ics  cronquiles-online.json  geocoding_cache.json  history.json  luma_url_cache.json  states_metadata.json
docs/: AGENTS.md  COMMUNITIES.md  GITHUB_PAGES_SETUP.md  MANUAL_EVENTS.md  PROJECT_STRUCTURE.md  UX_REVISION_LAWS_OF_UX.md
gh-pages/: README-LOCAL.md  README.md  cronquiles.ics  cronquiles.json  eventos.html  index.html  serve.py  serve.sh
gh-pages/css/: components.css  layout.css  styles.css  variables.css
gh-pages/data/: cronquiles-cdmx.ics  cronquiles-cdmx.json  cronquiles-gdl.ics  cronquiles-gdl.json  cronquiles-mexico.ics  cronquiles-mexico.json  cronquiles-monterrey.ics  cronquiles-monterrey.json  cronquiles-mx-ags.ics  cronquiles-mx-ags.json  cronquiles-mx-cmx.ics  cronquiles-mx-cmx.json  cronquiles-mx-jal.ics  cronquiles-mx-jal.json  cronquiles-mx-méx.ics  cronquiles-mx-méx.json  cronquiles-mx-nle.ics  cronquiles-mx-nle.json  cronquiles-mx-pue.ics  cronquiles-mx-pue.json  cronquiles-mx-qro.ics  cronquiles-mx-qro.json  cronquiles-mx-tab.ics  cronquiles-mx-tab.json  cronquiles-mx-tla.ics  cronquiles-mx-tla.json  (+7 more)
js/: app.js  config.js
tests/: test_dynamic_generation.py  test_ics_aggregator.py
tools/: deduplicate_events.py  fix_cache_encoding.py  populate_cache_from_history.py  scan_feeds_and_cache.py  scrape_luma_event.py  scrape_meetup_history.py  sort_history.py  update_communities_status.py
(+37 files in other folders)
