[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cron-quiles"
version = "1.0.0"
description = "Agregador de calendarios tech (Meetup, Luma, ICS) que se actualiza solo, como buen cron"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Shellaquiles Community"}
]
keywords = ["ics", "calendar", "events", "meetup", "mexico", "tech", "cron"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "requests>=2.31.0",
    "icalendar>=5.0.0",
    "python-dateutil>=2.8.2",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/shellaquiles/cron-quiles"
Repository = "https://github.com/shellaquiles/cron-quiles"
Issues = "https://github.com/shellaquiles/cron-quiles/issues"

[project.scripts]
cron-quiles = "cronquiles.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
