[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cron-quiles"
version = "1.0.0"
description = "Agregador de calendarios tech (Meetup, Luma, ICS) que se actualiza solo, como buen cron"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Shellaquiles Community"}
]
keywords = ["ics", "calendar", "events", "meetup", "mexico", "tech", "cron"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "requests>=2.31.0",
    "icalendar>=5.0.0",
    "python-dateutil>=2.8.2",
    "PyYAML>=6.0.1",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-api-python-client>=2.100.0",
    "beautifulsoup4>=4.12.2",
    "pycountry>=22.3.5",
    "geopy>=2.4.1",
    "unidecode>=1.3.7",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/shellaquiles/cron-quiles"
Repository = "https://github.com/shellaquiles/cron-quiles"
Issues = "https://github.com/shellaquiles/cron-quiles/issues"

[project.scripts]
cron-quiles = "cronquiles.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cronquiles"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/pyproject.toml",
    "/README.md",
    "/LICENSE",
    "/Makefile",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
]
